...
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:text="Color (Lab): 0.67, -4.05, 1.77" />

    <ImageView
        android:id="@+id/image_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
...
