/*
 * Copyright (C) Stichting Akvo (Akvo Foundation)
 *
 * This file is part of Akvo Caddisfly.
 *
 * Akvo Caddisfly is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Akvo Caddisfly is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
 */

package org.akvo.caddisfly.test


import android.content.Intent
import android.os.Bundle
import android.util.Log
import androidx.test.core.app.ApplicationProvider
import androidx.test.core.app.launchActivity
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.rules.activityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import androidx.test.platform.app.InstrumentationRegistry.getInstrumentation
import androidx.test.rule.GrantPermissionRule
import androidx.test.uiautomator.UiDevice
import org.akvo.caddisfly.BuildConfig
import org.akvo.caddisfly.R
import org.akvo.caddisfly.common.SensorConstants
import org.akvo.caddisfly.common.TestConstants
import org.akvo.caddisfly.model.TestType
import org.akvo.caddisfly.repository.TestConfigRepository
import org.akvo.caddisfly.ui.MainActivity
import org.akvo.caddisfly.ui.TestActivity
import org.akvo.caddisfly.util.*
import org.akvo.caddisfly.util.TestHelper.activateTestMode
import org.akvo.caddisfly.util.TestHelper.clearPreferences
import org.akvo.caddisfly.util.TestHelper.loadData
import org.akvo.caddisfly.util.TestHelper.takeScreenshot
import org.akvo.caddisfly.util.TestUtil.sleep
import org.hamcrest.Matchers
import org.junit.Assert.assertEquals
import org.junit.Before
import org.junit.BeforeClass
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import java.util.*
import kotlin.math.max

@LargeTest
@RunWith(AndroidJUnit4::class)
class StriptestInternalTest {

    @get:Rule
    val mMainActivityTestRule = activityScenarioRule<MainActivity>()

    @Rule
    @JvmField
    var mGrantPermissionRule: GrantPermissionRule =
        GrantPermissionRule.grant(
            "android.permission.CAMERA",
            "android.permission.WRITE_EXTERNAL_STORAGE"
        )

    companion object {
        @JvmStatic
        @BeforeClass
        fun initialize() {
            if (!TestHelper.isDeviceInitialized()) {
                mDevice = UiDevice.getInstance(getInstrumentation())
            }
        }
    }

    @Before
    fun setUp() {
        loadData(ApplicationProvider.getApplicationContext())
        clearPreferences()
        activateTestMode()
    }

    @Test
    fun striptest_All() {

        val testConfigRepository = TestConfigRepository()
        val testList = testConfigRepository.getTests(TestType.STRIP_TEST)

        var resultWaitDelay: Int

        for (i in 0 until TestConstants.STRIP_TESTS_COUNT) {

            mDevice.waitForIdle()

            val testInfo = testList[i]

            assertEquals(testInfo.subtype, TestType.STRIP_TEST)

            val uuid = testInfo.uuid
            val id = uuid.substring(uuid.lastIndexOf("-") + 1)

            run {

                @Suppress("SpellCheckingInspection")
                if (!isStripPatchAvailable(testInfo.name!!)) {
                    resultWaitDelay = 7000
                } else if (("6843158b47b4 6ed8142b6b07, 420551851acd 1b7db640037c d555f04db952 aa4a4e3100c9 "
                            + "411a4093f6b6 321bbbd9876b 798b81d2b019 32d9b8f4aecf").contains(id)
                ) {
                    resultWaitDelay = 0
                    for (result in testInfo.results!!) {
                        if (result.timeDelay > resultWaitDelay) {
                            resultWaitDelay = result.timeDelay
                        }
                    }
                    resultWaitDelay = max(7000, (resultWaitDelay + 5) * 1000)
                } else {
                    resultWaitDelay = 7000
                }

                Log.e("Caddisfly Log", "id: $id")

                val intent = Intent()
                intent.action = BuildConfig.APPLICATION_ID
                val data = Bundle()
                data.putString(SensorConstants.TEST_ID, uuid)
                intent.putExtras(data)

                mDevice.waitForIdle()

                mMainActivityTestRule.scenario.close()

                launchActivity<TestActivity>(intent)

                navigateToTest(id)

                var pages = navigateInstructions(id, 1)

                if (TestUtil.isEmulator) {
//                    onView(withText(R.string.camera_not_good))
//                        .inRoot(
//                            RootMatchers.withDecorView(
//                                Matchers.not(
//                                    Matchers.`is`(
//                                        mActivityTestRule.activity.window
//                                            .decorView
//                                    )
//                                )
//                            )
//                        ).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
                    return@run
                }

                clickStartButton()

                // 5 in 1 strip
                if ("411a4093f6b6".contains(id)) {

                    sleep(2000)

                    takeScreenshot(id, pages)

                    sleep(resultWaitDelay)

                    pages = navigateInstructions(id, ++pages)

                    sleep(1000)

                    clickStartButton()
                }

                sleep(1000)

                takeScreenshot(id, pages)

                sleep(resultWaitDelay)

                takeScreenshot(id, ++pages)

                onView(
                    Matchers.allOf(
                        withId(R.id.buttonSubmitResult), withText(R.string.submit_result),
                        ViewMatchers.isDisplayed()
                    )
                ).perform(click())
            }
        }
    }

    private fun navigateToTest(id: String) {

        mDevice.waitForIdle()

        sleep(1000)

        takeScreenshot(id, -1)

        mDevice.waitForIdle()

        onView(withText(R.string.next)).perform(click())

        sleep(2000)

        takeScreenshot(id, 0)
    }

    private fun navigateInstructions(id: String, startIndex: Int): Int {
        var pages = startIndex
        sleep(3000)

        for (i in 0..16) {
            try {
                takeScreenshot(id, pages)

                pages++

                @Suppress("SpellCheckingInspection")
                if ("ac33b44f9992, 32d9b8f4aecf".contains(id)) {
                    try {
                        if (pages == 5) {

                            // todo: Click location should be based on screen resolution?
                            when (Locale.getDefault().language.substring(0, 2)) {
                                "en" -> {
                                    mDevice.click(350, 390)
                                }
                                "es" -> {
                                    mDevice.click(900, 660)
                                }
                                else -> {
                                    mDevice.click(900, 600)
                                }
                            }

                            sleep(3000)
                            takeScreenshot(id, pages)
                            pages++
                            sleep(600)

                            onView(withText(R.string.ok)).perform(click())
                        }
                    } catch (ignore: Exception) {
                    }
                }

                onView(withId(R.id.image_pageRight)).perform(click())

            } catch (e: Exception) {
                sleep(600)
                break
            }

        }
        return pages
    }
}
